finished option 2
